fix the overflow when the picture's height is too big

--- a/core.css
+++ b/core.css
@@ -41,8 +41,7 @@ body, html {
 }
 .img {
     max-width: 330px;
-    outline-width: 0;
-    border-width: 0;
+    max-height: 280px;
 }
 
 .btn {
